--- a/.github/workflows/apk.yml
+++ b/.github/workflows/apk.yml
@@ -14,10 +14,10 @@ jobs:
 
       steps:
         - uses: actions/checkout@v1
-        - name: set up JDK 1.8
+        - name: set up JDK 
           uses: actions/setup-java@v1
           with:
-            java-version: 1.8
+            java-version: 11.0.3
 
         - name: Grant Permission to Execute
           run: chmod +x gradlew
